Fix scrollbar and text overflow auto scroll

--- a/public/css/chatbox.css
+++ b/public/css/chatbox.css
@@ -30,6 +30,14 @@ div {
 
 .chatWindow {
     background-color: white;
+    width: 100%;
+    height: 100%;
+    padding-right: 20%;
+    overflow-y:scroll;
+}
+
+.charWindowParent {
+    background-color: white;
     padding: 10px;
     margin-right: 20px;
     width: 75%;
@@ -37,7 +45,7 @@ div {
     float: left;
     border: 1px solid black;
     border-radius: 25px;
-    overflow-y: hidden;
+    overflow: hidden;
 }
 
 .lobby {
